Kubernetes/apps/prod/gitops/config/ingress-argocd-ui.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-ui
  namespace: gitops
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - argocd.sinlessgames.com
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - argocd.sinlessgames.com
      tls:
        mode: SIMPLE
        credentialName: argocd-ui-tls
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-ui
  namespace: gitops
spec:
  hosts:
    - argocd.sinlessgames.com
  gateways:
    - gitops/argocd-ui
  http:
    - route:
        - destination:
            host: argo-cd-argocd-server.gitops.svc.cluster.local
            port:
              number: 80
