Kubernetes/apps/prod/gitops/config/virtualservice-argocd-ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-ui
  namespace: gitops
spec:
  gateways:
    - istio-system/shared-edge
  hosts:
    - argocd.sinlessgames.com
  http:
    - route:
        - destination:
            host: argo-cd-argocd-server.gitops.svc.cluster.local
            port:
              number: 80
